--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^5.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "nodemailer": "^4.6.4"
+    "nodemailer": "^4.6.4",
+    "nodemon": "^1.17.4",
+    "path": "^0.12.7",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
