--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "firebase": "^5.0.3",
     "nodemailer": "^4.6.4",
     "nodemon": "^1.17.4",
     "path": "^0.12.7",
