--- a/package.json
+++ b/package.json
@@ -33,4 +33,10 @@
     "url": "https://github.com/rjmcbain/nodewebsite/issues"
   },
   "homepage": "https://github.com/rjmcbain/nodewebsite#readme"
+  },
+  "engines":{
+    "node": "v8.9.1",
+    "npm": "5.5.1"
+
 }
+
